--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
             </div>
             <div class="row text-center">
                 <div class="col-md-12">
-                    <p id="copyright">&copy; MetaDee <span id="year">2022 </span> </p><!-- Copyright Text -->
+                    <p id="copyright">&copy; MetaDee <span>2022 </span> </p><!-- Copyright Text -->
                 </div>
             </div>
         </div>
