--- a/contact.html
+++ b/contact.html
@@ -167,9 +167,11 @@
                                                 </div>
                                                 <div class="col-md-12">
                                                     <div class="form-group">
-                                                        <input type="submit" value="Send Message" class="btn btn-primary">
+                                                        <input type="submit" value="Send Message" class="btn btn-primary" onclick="redirectToIndex()">
                                                         <div class="submitting"></div>
                                                     </div>
+                                                    
+                                                    
                                                 </div>
                                             </div>
                                         </form>
