--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
                 <div class="col-md-6">
                     <h1>JOIN<br>THE<br>FIGHT</h1>
                     <a class="button" href="contact.html">Contact Us</a>
-                    <p data-toggle="modal" data-target="#systemreq" class="modal-expand">System Requirements</p>
+                    <!--<p data-toggle="modal" data-target="#systemreq" class="modal-expand">System Requirements</p>-->
                 </div>
-                <!-- System Requirements Modal -->
+                <!-- System Requirements Modal 
                 <div class="modal fade" id="systemreq" tabindex="-1" role="dialog" aria-labelledby="system requirements" aria-hidden="true">
                   <div class="modal-dialog modal-lg" role="document">
                     <div class="modal-content">
@@ -283,7 +283,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div>-->
             </div>
             <div class="row text-center">
                 <div class="col-md-12">
