--- a/contact.html
+++ b/contact.html
@@ -76,13 +76,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
+                        <a class="nav-link" href="index.html #about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#media">Media</a>
+                        <a class="nav-link" href="index.html #media">Media</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#features">Features</a>
+                        <a class="nav-link" href="index.html #features">Features</a>
                     </li>              
                     <!-- Dropdown Menu -->          
                     <li class="nav-item dropdown">
