--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html #about">About</a>
+                        <a href="index.html #about">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html #media">Media</a>
